# rust_ten_commandments

./: Cargo.toml  README.md
src/: lib.rs  main.rs
